--- a/app/src/main/res/layout/fragment_advice.xml
+++ b/app/src/main/res/layout/fragment_advice.xml
@@ -4,7 +4,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <FrameLayout
@@ -24,67 +24,86 @@
                 android:textSize="@dimen/top_center_title_size" />
 
             <TextView
-                android:id="@+id/tv_top_right"
+                android:id="@+id/tv_to_comment"
                 android:layout_width="wrap_content"
                 android:layout_height="44dp"
                 android:layout_gravity="right|center_vertical"
                 android:layout_marginRight="15dp"
                 android:gravity="center"
-                android:text="撰写评论"
+                android:text="撰写建议"
                 android:textColor="@color/white"
                 android:textSize="14sp" />
 
         </FrameLayout>
 
-        <include
-            android:id="@+id/header_layout"
-            layout="@layout/layout_advice_header" />
-
-        <View
-            style="@style/style_split_line"
-            android:layout_height="10dp" />
-
-        <LinearLayout
+        <ScrollView
+            android:visibility="gone"
+            android:id="@+id/scrollView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:gravity="center_vertical"
-            android:paddingLeft="@dimen/layout_left_interval"
-            android:paddingRight="@dimen/layout_right_interval">
+            android:layout_height="match_parent">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="44dp"
-                android:layout_gravity="right|center_vertical"
-                android:layout_marginRight="15dp"
-                android:gravity="center"
-                android:text="轻点评分"
-                android:textColor="@color/app_txt_gray"
-                android:textSize="16sp" />
-
-            <com.cdkj.myxb.weight.views.MyRatingBar
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                app:clickable="true"
-                app:halfstart="false"
-                app:starCount="5"
-                app:starEmpty="@drawable/star_empty"
-                app:starFill="@drawable/star_full"
-                app:starImageHeight="28dp"
-                app:starImagePadding="8dp"
-                app:starImageWidth="28dp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
 
-        </LinearLayout>
+                <include
+                    android:id="@+id/header_layout"
+                    layout="@layout/layout_advice_header" />
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+                <View
+                    style="@style/style_split_line"
+                    android:layout_height="10dp" />
 
-        </android.support.v7.widget.RecyclerView>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/white"
+                    android:gravity="center_vertical"
+                    android:paddingLeft="@dimen/layout_left_interval"
+                    android:paddingRight="@dimen/layout_right_interval">
 
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="44dp"
+                        android:layout_gravity="right|center_vertical"
+                        android:layout_marginRight="15dp"
+                        android:gravity="center"
+                        android:text="轻点评分"
+                        android:textColor="@color/app_txt_gray"
+                        android:textSize="16sp" />
+
+                    <com.cdkj.myxb.weight.views.MyRatingBar
+                        android:id="@+id/ratingbar"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="20dp"
+                        app:clickable="true"
+                        app:halfstart="false"
+                        app:starCount="5"
+                        app:starEmpty="@drawable/star_empty"
+                        app:starFill="@drawable/star_full"
+                        app:starImageHeight="28dp"
+                        app:starImagePadding="8dp"
+                        app:starImageWidth="28dp" />
+
+
+                </LinearLayout>
+
+                <View style="@style/style_split_line" />
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recyclerView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                </android.support.v7.widget.RecyclerView>
+
+
+            </LinearLayout>
+
+        </ScrollView>
 
     </LinearLayout>
 </layout>
