--- a/app/src/main/res/layout/activity_advice_edit.xml
+++ b/app/src/main/res/layout/activity_advice_edit.xml
@@ -58,7 +58,7 @@
                 android:layout_height="200dp"
                 android:background="@color/white"
                 android:gravity="top"
-                android:hint="评论（选填）"
+                android:hint="建议（选填）"
                 android:paddingLeft="15dp"
                 android:paddingRight="15dp"
                 android:paddingTop="10dp"
