--- a/app/src/main/res/layout/activity_experts_order_details.xml
+++ b/app/src/main/res/layout/activity_experts_order_details.xml
@@ -372,7 +372,7 @@
                 android:layout_marginTop="15dp"
                 android:layout_weight="1"
                 android:background="@drawable/btn_select_common"
-                android:text="前往评价"
+                android:text="评价"
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 android:visibility="gone" />
