--- a/app/src/main/res/layout/activity_user_setting.xml
+++ b/app/src/main/res/layout/activity_user_setting.xml
@@ -17,7 +17,6 @@
             android:paddingLeft="@dimen/layout_left_interval"
             android:paddingTop="10dp">
 
-
             <ImageView
                 android:id="@+id/img_user_logo"
                 android:layout_width="70dp"
@@ -26,11 +25,13 @@
                 android:layout_marginLeft="10dp"
                 android:src="@drawable/my_logo" />
 
-            <View
-                android:layout_width="0dp"
-                android:layout_height="0dp"
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_weight="1" />
+                android:layout_marginLeft="10dp"
+                android:layout_weight="1"
+                android:text="点击更换头像" />
 
 
             <ImageView
