--- a/app/src/main/res/layout/fragment_advice.xml
+++ b/app/src/main/res/layout/fragment_advice.xml
@@ -36,74 +36,99 @@
 
         </FrameLayout>
 
-        <ScrollView
-            android:visibility="gone"
-            android:id="@+id/scrollView"
+        <com.scwang.smartrefresh.layout.SmartRefreshLayout
+            android:id="@+id/refreshLayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="@color/bg_gray"
+            app:srlAccentColor="@android:color/tertiary_text_dark"
+            app:srlEnablePreviewInEditMode="true"
+            app:srlPrimaryColor="@color/bg_gray">
+            <!--srlAccentColor srlPrimaryColor 将会改变 Header 和 Footer 的主题颜色-->
+            <!--srlEnablePreviewInEditMode 可以开启和关闭预览功能-->
+            <com.scwang.smartrefresh.layout.header.ClassicsHeader
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
-            <LinearLayout
+            <ScrollView
+                android:id="@+id/scrollView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical">
-
-
-                <include
-                    android:id="@+id/header_layout"
-                    layout="@layout/layout_advice_header" />
-
-                <View
-                    style="@style/style_split_line"
-                    android:layout_height="10dp" />
+                android:visibility="gone">
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/white"
-                    android:gravity="center_vertical"
-                    android:paddingLeft="@dimen/layout_left_interval"
-                    android:paddingRight="@dimen/layout_right_interval">
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="44dp"
-                        android:layout_gravity="right|center_vertical"
-                        android:layout_marginRight="15dp"
-                        android:gravity="center"
-                        android:text="轻点评分"
-                        android:textColor="@color/app_txt_gray"
-                        android:textSize="16sp" />
 
-                    <com.cdkj.myxb.weight.views.MyRatingBar
-                        android:id="@+id/ratingbar"
-                        android:layout_width="wrap_content"
+                    <include
+                        android:id="@+id/header_layout"
+                        layout="@layout/layout_advice_header" />
+
+                    <View
+                        style="@style/style_split_line"
+                        android:layout_height="10dp" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="20dp"
-                        app:clickable="true"
-                        app:halfstart="false"
-                        app:starCount="5"
-                        app:starEmpty="@drawable/star_empty"
-                        app:starFill="@drawable/star_full"
-                        app:starImageHeight="28dp"
-                        app:starImagePadding="8dp"
-                        app:starImageWidth="28dp" />
+                        android:background="@color/white"
+                        android:gravity="center_vertical"
+                        android:paddingLeft="@dimen/layout_left_interval"
+                        android:paddingRight="@dimen/layout_right_interval">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="44dp"
+                            android:layout_gravity="right|center_vertical"
+                            android:layout_marginRight="15dp"
+                            android:gravity="center"
+                            android:text="轻点评分"
+                            android:textColor="@color/app_txt_gray"
+                            android:textSize="16sp" />
+
+                        <com.cdkj.myxb.weight.views.MyRatingBar
+                            android:id="@+id/ratingbar"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="20dp"
+                            app:clickable="true"
+                            app:halfstart="false"
+                            app:starCount="5"
+                            app:starEmpty="@drawable/star_empty"
+                            app:starFill="@drawable/star_full"
+                            app:starImageHeight="28dp"
+                            app:starImagePadding="8dp"
+                            app:starImageWidth="28dp" />
+
+
+                    </LinearLayout>
+
+                    <View style="@style/style_split_line" />
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <android.support.v7.widget.RecyclerView
+                            android:id="@+id/recyclerView"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                        </android.support.v7.widget.RecyclerView>
+
+                    </RelativeLayout>
 
 
                 </LinearLayout>
 
-                <View style="@style/style_split_line" />
+            </ScrollView>
 
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/recyclerView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                </android.support.v7.widget.RecyclerView>
-
-
-            </LinearLayout>
-
-        </ScrollView>
+            <com.scwang.smartrefresh.layout.footer.ClassicsFooter
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </com.scwang.smartrefresh.layout.SmartRefreshLayout>
 
     </LinearLayout>
 </layout>
