--- a/app/src/main/res/layout/layout_integral_order.xml
+++ b/app/src/main/res/layout/layout_integral_order.xml
@@ -2,15 +2,15 @@
 
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    tools:showIn="@layout/activity_integral_mall"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:showIn="@layout/activity_integral_mall">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="45dp"
+        android:background="@color/white"
         android:orientation="horizontal"
-        android:weightSum="2"
-    >
+        android:weightSum="2">
 
         <FrameLayout
             android:id="@+id/fra_integral_order"
@@ -18,6 +18,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:layout_weight="1"
+
             android:orientation="horizontal">
 
             <LinearLayout
