--- a/cdcommon/src/main/res/layout/empty_view.xml
+++ b/cdcommon/src/main/res/layout/empty_view.xml
@@ -13,6 +13,7 @@
 
 
         <ImageView
+            android:visibility="gone"
             android:id="@+id/img"
             android:layout_width="105dp"
             android:layout_height="105dp"
