--- a/app/src/main/res/layout/item_shopper_appointment.xml
+++ b/app/src/main/res/layout/item_shopper_appointment.xml
@@ -49,19 +49,19 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
                             android:layout_marginLeft="15dp"
+                            android:layout_weight="1"
                             android:ellipsize="end"
-                            android:maxLength="6"
-                            android:singleLine="true"
                             android:textColor="@color/app_txt_black"
                             android:textSize="15sp"
-                            tools:text="王二小" />
+                            tools:text="王二小王二" />
 
                         <ImageView
                             android:id="@+id/img_gender"
                             android:layout_width="16dp"
                             android:layout_height="16dp"
-                            android:layout_gravity="center_vertical"
                             android:layout_marginLeft="8dp"
+                            android:layout_marginRight="5dp"
+                            android:layout_marginTop="2dp"
                             tools:src="@drawable/women_2" />
 
                     </LinearLayout>
