--- a/app/src/main/res/layout/layout_order_details_header.xml
+++ b/app/src/main/res/layout/layout_order_details_header.xml
@@ -59,14 +59,11 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom"
                     android:layout_marginLeft="10dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_weight="1"
                     android:textColor="@color/app_txt_red"
                     tools:text="1900" />
 
-
-                <View
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:layout_weight="1" />
 
                 <TextView
                     android:id="@+id/tv_num"
