--- a/app/src/main/res/layout/activity_advice_edit.xml
+++ b/app/src/main/res/layout/activity_advice_edit.xml
@@ -42,7 +42,7 @@
                     android:layout_height="44dp"
                     android:layout_gravity="center"
                     android:gravity="center"
-                    android:text="轻点星形来评分"
+                    android:text="轻点星星来评分"
                     android:textColor="@color/app_txt_gray"
                     android:textSize="16sp" />
 
