--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -73,14 +73,42 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:visibility="gone"
+                android:id="@+id/lin_info"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:layout_marginLeft="@dimen/layout_left_right_interval"
-                android:layout_marginTop="25dp"
-                android:text="历史搜索"
-                android:textColor="@color/app_txt_black" />
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginLeft="@dimen/layout_left_right_interval"
+                    android:layout_marginTop="25dp"
+                    android:layout_weight="1"
+                    android:text="历史搜索"
+                    android:textColor="@color/app_txt_black" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="25dp"
+                    android:src="@drawable/address_delete" />
+
+                <TextView
+                    android:id="@+id/tv_clear"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="@dimen/layout_right_interval"
+                    android:layout_marginTop="25dp"
+                    android:text="清空"
+                    android:textColor="@color/app_txt_black" />
+
+            </LinearLayout>
+
 
             <com.google.android.flexbox.FlexboxLayout
                 android:id="@+id/flexbox_layout_search"
