--- a/app/src/main/res/layout/activity_user_setting.xml
+++ b/app/src/main/res/layout/activity_user_setting.xml
@@ -29,9 +29,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginLeft="10dp"
+                android:layout_marginLeft="15dp"
                 android:layout_weight="1"
-                android:text="按照等级从图片库中选择" />
+                android:text="按照等级从图片库中选择"
+                android:textSize="13sp" />
 
             <ImageView
                 android:id="@+id/img_right"
