--- a/app/src/main/res/layout/item_trip.xml
+++ b/app/src/main/res/layout/item_trip.xml
@@ -25,68 +25,20 @@
                 android:src="@drawable/default_pic" />
 
 
-            <LinearLayout
-                android:layout_width="match_parent"
+            <TextView
+                android:layout_gravity="center_vertical"
+                android:id="@+id/tv_date"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="15dp"
-                android:orientation="vertical">
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:visibility="gone"
-                        android:id="@+id/tv_week"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="15dp"
-                        android:layout_marginTop="10dp"
-                        android:ellipsize="end"
-                        android:gravity="left"
-                        android:maxLines="2"
-                        android:textColor="@color/app_txt_black"
-                        android:textSize="16sp"
-                        tools:text="23232" />
-
-                    <TextView
-                        android:id="@+id/tv_date"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="15dp"
-                        android:layout_marginTop="10dp"
-                        android:layout_weight="1"
-                        android:ellipsize="end"
-                        android:gravity="left"
-                        android:maxLines="2"
-                        android:textColor="@color/app_txt_black"
-                        android:textSize="16sp"
-                        tools:text="23232" />
-
-                    <TextView
-                        android:id="@+id/tv_minutes"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="15dp"
-                        android:layout_marginTop="10dp"
-                        android:layout_weight="1"
-                        android:ellipsize="end"
-                        android:gravity="left"
-                        android:maxLines="2"
-                        android:textColor="@color/app_txt_black"
-                        android:textSize="16sp"
-                        tools:text="23232" />
-
-                </LinearLayout>
-
-
-            </LinearLayout>
+                android:layout_weight="1"
+                android:ellipsize="end"
+                android:gravity="left"
+                android:maxLines="2"
+                android:textColor="@color/app_txt_black"
+                android:textSize="16sp"
+                tools:text="23232" />
 
         </LinearLayout>
 
