--- a/app/src/main/res/layout/item_logo_select.xml
+++ b/app/src/main/res/layout/item_logo_select.xml
@@ -9,16 +9,24 @@
 
     <FrameLayout
         android:id="@+id/fra_bg"
-        android:layout_width="62dp"
-        android:layout_height="62dp"
-        >
+        android:layout_width="63dp"
+        android:layout_height="63dp">
 
         <ImageView
             android:id="@+id/img_logo"
-            android:layout_width="58dp"
-            android:layout_height="58dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:layout_gravity="center"
             tools:src="@drawable/msg_logo" />
+
+        <ImageView
+            android:visibility="gone"
+            android:id="@+id/img_logo_select"
+            android:layout_width="15sp"
+            android:layout_height="15dp"
+            android:layout_gravity="right"
+            android:layout_marginTop="5dp"
+            tools:src="@drawable/logoselect" />
 
     </FrameLayout>
 
