--- a/app/src/main/res/layout/item_comments.xml
+++ b/app/src/main/res/layout/item_comments.xml
@@ -23,7 +23,7 @@
             android:src="@drawable/my_logo" />
 
         <LinearLayout
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:orientation="vertical">
@@ -34,6 +34,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="15dp"
+                android:ellipsize="end"
+                android:singleLine="true"
                 android:textColor="@color/app_txt_black"
                 android:textSize="14sp"
                 tools:text="2018-02-07" />
@@ -56,14 +58,21 @@
 
         </LinearLayout>
 
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
+
         <TextView
             android:id="@+id/tv_comment_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
+            android:ellipsize="end"
+            android:singleLine="true"
             android:textColor="@color/app_txt_gray"
             android:textSize="12sp"
-            tools:text="2018-02-07" />
+            tools:text="2018-02-07 2018-02-07 " />
 
     </LinearLayout>
 
