--- a/app/src/main/res/layout/item_logo_select.xml
+++ b/app/src/main/res/layout/item_logo_select.xml
@@ -26,7 +26,7 @@
             android:layout_height="15dp"
             android:layout_gravity="right"
             android:layout_marginTop="5dp"
-            tools:src="@drawable/logoselect" />
+            android:src="@drawable/logoselect" />
 
     </FrameLayout>
 
