--- a/app/src/main/res/layout/layout_appointment_header.xml
+++ b/app/src/main/res/layout/layout_appointment_header.xml
@@ -7,7 +7,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white_50"
+        android:background="@color/white"
         android:orientation="horizontal"
         android:paddingBottom="15dp"
         android:paddingLeft="@dimen/layout_left_interval"
@@ -38,12 +38,11 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_marginLeft="15dp"
+                    android:layout_weight="1"
                     android:ellipsize="end"
-                    android:maxLength="6"
-                    android:singleLine="true"
-                    tools:text="王二小"
                     android:textColor="@color/app_txt_black"
-                    android:textSize="15sp" />
+                    android:textSize="15sp"
+                    tools:text="王二小" />
 
                 <ImageView
                     android:layout_width="16dp"
@@ -62,9 +61,9 @@
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="15dp"
                 android:layout_marginTop="5dp"
-                tools:text="2018-02-07"
                 android:textColor="@color/app_txt_black"
-                android:textSize="14sp" />
+                android:textSize="14sp"
+                tools:text="2018-02-07" />
 
             <com.google.android.flexbox.FlexboxLayout
                 android:id="@+id/flexbox_layout"
@@ -73,7 +72,6 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="5dp"
                 app:flexWrap="wrap">
-
 
 
             </com.google.android.flexbox.FlexboxLayout>
