--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,4 +13,5 @@
     <dimen name="product_bottom_height">50dp</dimen>
     <dimen name="product_title_margintop">5dp</dimen>
     <dimen name="appointment_rad">15dp</dimen>
+    <dimen name="first_page_item_img_size">30dp</dimen>
 </resources>
